# NetworkOnChip

./: .clang-format  CMakeLists.txt  main.cpp  run.sh  trace.vcd
OldNoCExample/: cod.cpp  cod.h  decod.cpp  decod.h  full_router.h  globals.h  kernel_ni.cpp  kernel_ni.h  main.cpp  master.h  mem_if.h  memoria.cpp  memoria.h  mips.cpp  mips.h  noc_common.h  router.cpp  router.h  shell_master_ni.h  shell_memoria.cpp  shell_mips.cpp  shell_mips.h  shell_mips_if.h  shell_slave_ni.h  slave.h
include/: flit.h  inetworkinterfacefrontend.h  irouterchannel.h  networkinterface.h  networkinterfacefrontendbase.h  nocassembler.h  noccommon.h  nocdebug.h  nocrouting.h  pemaster.h  pemastershell.h  penull.h  penullshell.h  peslave.h  peslaveshell.h  router.h  routerchannel.h  specialkernel.h
ipcores/: cache.cpp  cache.h  decode.h  execute.h  fetch.h  main.cpp  mem.h  mipsshell.cpp  mipsshell.h  networkinterfacefrontendbase.h  pemaster.cpp  pemaster.h  pemastershell.cpp  peslave.cpp  peslaveshell.cpp  shared.h  top.h
src/: flit.cpp  networkinterface.cpp  networkinterfacefrontendbase.cpp  nocassembler.cpp  nocrouting.cpp  pemaster.cpp  pemastershell.cpp  penull.cpp  penullshell.cpp  peslave.cpp  peslaveshell.cpp  router.cpp  routerchannel.cpp  specialkernel.cpp
test/: basicshellscommunication.cpp  channeltester.cpp  channeltester.h  master.cpp  master.h  mastershell.cpp  networkinterfacetester.cpp  petestreceiver.cpp  petestreceiver.h  petestreceiverfrontend.cpp  petestsender.cpp  petestsender.h  petestsenderfrontend.cpp  petestsenderfrontend.h  routerchanneltester.cpp  slave.cpp  (+2 more)
(+17 files in other folders)
